--- a/css/custom.css
+++ b/css/custom.css
@@ -1,12 +1,33 @@
+html{
+    background-image: url("../images/charcoal.gif");
+}
 body {
+    background:transparent;
     padding-top: 60px;
+    padding-bottom: 20px;
 }
 
 .container-fluid > .content {
-    margin-left: 250px;
-    position: absolute;
+    margin-left: 240px;
+    background: white;
+    padding: 20px;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
+}
+
+.content .content-body{
+    position: relative;
 }
 
 .page-header h1 {
     font-size: 36px;
+}
+
+.span7{
+    min-width: 45%;
+}
+.container-fluid > .sidebar {
+    float: none;
+    position: absolute
 }
