--- a/css/custom.css
+++ b/css/custom.css
@@ -20,10 +20,19 @@ body {
     position: relative;
 }
 
-.page-header h1 {
-    font-size: 36px;
+.page-header{
+    margin-bottom: 30px;
 }
-
+.page-header h1 {
+    font-size: 40px;
+    text-shadow: 1px 1px 3px #aaa;
+}
+.page-header small{
+       text-shadow: none;
+}
+a.back{
+    float:right;
+}
 .span7{
     min-width: 45%;
 }
