--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,11 +1,10 @@
-<head>
-    <meta charset="utf-8">
-    <title>{{ site.name }}{% if page.title %} - {{page.title}} {% endif %}</title>
-    <meta name="description" content="">
-    <meta name="author" content="David Michael Nelson">
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/custom.css" rel="stylesheet">
-</head>
+<meta charset="utf-8">
+<title>{{ site.name }}{% if page.title %} - {{page.title}} {% endif %}</title>
+<meta name="description" content="">
+<meta name="author" content="David Michael Nelson">
+<!--[if lt IE 9]>
+<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+<link href="/css/bootstrap.min.css" rel="stylesheet">
+<link href="/css/custom.css" rel="stylesheet">
+<script type="text/javascript" src="/js/jquery-1.6.4.js"></script>
