--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-{% include head.html %}
+<head>
+    {% include head.html %}
+</head>
 <body>
 {% include navigation.html %}
 <div class="container-fluid">
     {% include sidebar.html %}
+    {% include content_header.html %}
+
     <div class="content">
-        <div class="page-header">
-            <h1>david.mn
-                <small>- Just a bunch of not so relevant thoughts</small>
-            </h1>
-        </div>
+        {% include breadcrumbs.html %}
+
         <div class="content-body">
             {{content}}
         </div>
