--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,9 +3,12 @@
         <div class="container-fluid">
             <a class="brand" href="{{site.url}}">david.mn</a>
             <ul class="nav">
-                <li {% if page.section == 'blog' %} class="active" {% endif %}><a href="/">Blog</a></li>
-                <li {% if page.section == 'about' %} class="active" {% endif %}><a href="/about.html">About Me</a></li>
-                <li {% if page.section == 'contact' %} class="active" {% endif %}><a href="#contact">Contact</a></li>
+                <li
+                {% if page.section == 'blog' %} class="active" {% endif %}><a href="/">Blog</a></li>
+                <li
+                {% if page.section == 'about' %} class="active" {% endif %}><a href="/about.html">About Me</a></li>
+                <li
+                {% if page.section == 'contact' %} class="active" {% endif %}><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </div>
