--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,10 @@
     {% include content_header.html %}
 
     <div class="content">
-        {% include breadcrumbs.html %}
+        <ul class="breadcrumb">
+            <li><a href="{{site.url}}">david.mn</a> <span class="divider">&raquo;</span></li>
+            <li class="active">{{page.title}}</li>
+        </ul>
 
         <div class="content-body">
             {{content}}
