--- a/_includes/content_header.html
+++ b/_includes/content_header.html
@@ -1,5 +1,5 @@
 <div class="hero-unit">
     <h1>david.mn
-        <small>- Just a bunch of not so relevant thoughts</small>
+        <small>Just a bunch of not so relevant thoughts</small>
     </h1>
 </div>
