--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
 <![endif]-->
 <link href="/css/bootstrap.min.css" rel="stylesheet">
 <link href="/css/custom.css" rel="stylesheet">
+<link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 <script type="text/javascript" src="/js/jquery-1.6.4.js"></script>
 <script type="text/javascript">
     var _gaq = _gaq || [];
