--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,8 @@
 <![endif]-->
 <link href="/css/bootstrap.min.css" rel="stylesheet">
 <link href="/css/custom.css" rel="stylesheet">
-<link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+<link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+<link rel="alternate" type="application/atom+xml" title="david.mn Feed" href="/atom.xml">
 <script type="text/javascript" src="/js/jquery-1.6.4.js"></script>
 <script type="text/javascript">
     var _gaq = _gaq || [];
