Full posts on homepage

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,8 +6,7 @@
     <script type="text/javascript">
         $(function() {
             var comments = Comments({
-                        shortname: 'davidmn',
-                        developerMode: true
+                        shortname: 'davidmn'
                     });
             comments.initialize();
         })
