Added Twitter username on sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,15 +7,16 @@
 
         <p>- <a href="/about.html">more about me</a></p>
         <hr/>
+        <h3>Social</h3>
+        <ul>
+            <li><a href="http://br.linkedin.com/in/davidmichaelnelson">LinkedIn</a></li>
+            <li><a href="http://twitter.com/davidmichael">Twitter (@davidmichael)</a></li>
+        </ul>
+        <hr/>
         <h3>Open source</h3>
         <ul>
             <li><a href="http://github.com/dmnelson">GitHub account</a></li>
         </ul>
-        <hr/>
-        <h3>Social</h3>
-        <ul>
-            <li><a href="http://br.linkedin.com/in/davidmichaelnelson">LinkedIn</a></li>
-            <li><a href="http://twitter.com/davidmichael">Twitter</a></li>
-        </ul>
+
     </div>
 </div>
