--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,8 @@
 <meta charset="utf-8">
 <title>{{ site.name }}{% if page.title %} - {{page.title}} {% endif %}</title>
-<meta name="description" content="">
+<meta http-equiv="content-language" content="en">
+<meta name="description" content="Blog of David Michael Nelson regarding technology, programming and general software development topics">
+<meta name="keywords" content="David Michael Nelson, software, programming languages, blog">
 <meta name="author" content="David Michael Nelson">
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
