Adding Heroku support

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,16 +1,17 @@
-<meta charset="utf-8">
+<meta charset="utf-8"/>
 <title>{{ site.name }}{% if page.title %} - {{page.title}} {% endif %}</title>
-<meta http-equiv="content-language" content="en">
-<meta name="description" content="Blog of David Michael Nelson regarding technology, programming and general software development topics">
-<meta name="keywords" content="David Michael Nelson, software, programming languages, blog">
-<meta name="author" content="David Michael Nelson">
+<meta http-equiv="content-language" content="en"/>
+<meta name="description"
+      content="Blog of David Michael Nelson regarding technology, programming and general software development topics"/>
+<meta name="keywords" content="David Michael Nelson, software, programming languages, blog"/>
+<meta name="author" content="David Michael Nelson"/>
+<link href="/css/bootstrap.min.css" rel="stylesheet"/>
+<link href="/css/custom.css" rel="stylesheet"/>
+<link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+<link rel="alternate" type="application/atom+xml" title="david.mn Feed" href="/atom.xml"/>
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<link href="/css/bootstrap.min.css" rel="stylesheet">
-<link href="/css/custom.css" rel="stylesheet">
-<link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-<link rel="alternate" type="application/atom+xml" title="david.mn Feed" href="/atom.xml">
 <script type="text/javascript" src="/js/jquery-1.6.4.js"></script>
 <script type="text/javascript">
     var _gaq = _gaq || [];
