--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,9 @@
     <script type="text/javascript">
         $(function() {
             var comments = Comments({
-                        shortname: 'davidmn'
+                        shortname: 'davidmn',
+                        postId : '{{page.id}}',
+                        permalink: '{{ page.url | prepend: site.url}}'
                     });
             comments.initialize();
         })
@@ -29,11 +31,20 @@
 
             <section id="post">
                 <h2 class="post-title">{{page.title}}
-                <small>@ {{ page.date | date_to_long_string }}
-                by <a href="http://twitter.com/davidmichael">David Michael</a>
-            &mdash; <a href="{{ post.url }}">Permalink</a></small>
+                    <small>@ {{ page.date | date_to_long_string }}
+                        by <a href="http://twitter.com/davidmichael">David Michael</a>
+                        &mdash; <a href="{{ post.url }}">Permalink</a></small>
                 </h2>
                 {{content}}
+            </section>
+
+            <section id="related-posts">
+                <h3>Related</h3>
+                <ul>
+                    {% for post in site.related_posts %}
+                    <li><a href="{{post.url}}">{{post.title}}</a></li>
+                    {% endfor %}
+                </ul>
             </section>
             <hr/>
             <section id="comments">
