--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,14 +1,13 @@
 <meta charset="utf-8"/>
-<title>{{ site.name }}{% if page.title %} - {{page.title}} {% endif %}</title>
+<title>{{ site.title }}{% if page.title %} - {{page.title}} {% endif %}</title>
 <meta http-equiv="content-language" content="en"/>
-<meta name="description"
-      content="Blog of David Michael Nelson regarding technology, programming and general software development topics"/>
-<meta name="keywords" content="David Michael Nelson, software, programming languages, blog"/>
-<meta name="author" content="David Michael Nelson"/>
+<meta name="description" content="{{site.description}}"/>
+<meta name="keywords" content="{{site.keywords}}"/>
+<meta name="author" content="{{site.author}}"/>
 <link href="/css/bootstrap.min.css" rel="stylesheet"/>
 <link href="/css/custom.css" rel="stylesheet"/>
 <link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-<link rel="alternate" type="application/atom+xml" title="david.mn Feed" href="/atom.xml"/>
+<link rel="alternate" type="application/atom+xml" title="{{site.name}} Feed" href="/atom.xml"/>
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
@@ -27,3 +26,6 @@
         s.parentNode.insertBefore(ga, s);
     })();
 </script>
+<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+<script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
+
