--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,13 +22,12 @@
 
     <div class="content">
         <ul class="breadcrumb">
-            <li><a href="{{site.url}}">david.mn</a> <span class="divider">&raquo;</span></li>
+            <li><a href="{{site.url}}">{{site.title}}</a> <span class="divider">&raquo;</span></li>
             <li><a href="/">blog</a> <span class="divider">&raquo;</span></li>
             <li class="active">{{page.title}}</li>
         </ul>
 
         <div class="content-body">
-
             <section id="post">
                 <h2 class="post-title">{{page.title}}
                     <small>@ {{ page.date | date_to_long_string }}
@@ -36,15 +35,35 @@
                         &mdash; <a href="{{ post.url }}">Permalink</a></small>
                 </h2>
                 {{content}}
-            </section>
+                <section id="related-posts">
+                    <h3>Related posts</h3>
+                    <ul>
+                        {% for post in site.related_posts %}
+                        <li><a href="{{post.url}}">{{post.title}}</a></li>
+                        {% endfor %}
+                    </ul>
+                </section>
+                <div class="well">
 
-            <section id="related-posts">
-                <h3>Related</h3>
-                <ul>
-                    {% for post in site.related_posts %}
-                    <li><a href="{{post.url}}">{{post.title}}</a></li>
-                    {% endfor %}
-                </ul>
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-count="horizontal"
+                       data-url="{{site.url | append: page.url}}" data-via="davidmichael">Tweet</a>
+                    <g:plusone size="medium" href="{{site.url | append: page.url}}"></g:plusone>
+                    <span id="fb-root"></span>
+                    <script>(function(d, s, id) {
+                        var js, fjs = d.getElementsByTagName(s)[0];
+                        if (d.getElementById(id)) {
+                            return;
+                        }
+                        js = d.createElement(s);
+                        js.id = id;
+                        js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+                        fjs.parentNode.insertBefore(js, fjs);
+                    }(document, 'script', 'facebook-jssdk'));</script>
+
+                    <span style="vertical-align: middle" class="fb-like" data-href="david.mn" data-send="false"
+                          data-layout="button_count"
+                          data-show-faces="false"></span>
+                </div>
             </section>
             <hr/>
             <section id="comments">
