--- a/_layouts/master-page.html
+++ b/_layouts/master-page.html
@@ -2,24 +2,20 @@
 <html lang="en">
 <head>
     {% include head.html %}
+    {% if page.custom_head %}
+        {% include page.custom_head %}
+    {% endif %}
 </head>
 <body>
 {% include navigation.html %}
 <div class="container-fluid">
     {% include sidebar.html %}
     {% include content_header.html %}
-
     <div class="content">
-        <ul class="breadcrumb">
-            <li><a href="{{site.url}}">david.mn</a> <span class="divider">&raquo;</span></li>
-            <li class="active">{{page.title}}</li>
-        </ul>
-
-        <div class="content-body">
-            {{content}}
-        </div>
+        {{content}}
         {% include footer.html %}
     </div>
 </div>
+
 </body>
 </html>
