--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,4 @@
-@import "http://fonts.googleapis.com/css?family=Questrial&text=david.mn ";
+@import "http://fonts.googleapis.com/css?family=Questrial&text=david.mn+ %20";
 
 html {
     background-image: url("../images/charcoal.gif");
