--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -4,14 +4,14 @@
 <meta name="description" content="{{site.description}}"/>
 <meta name="keywords" content="{{site.keywords}}"/>
 <meta name="author" content="{{site.author}}"/>
-<script type="text/javascript" src="/js/head.load.min.js"></script>
+<script type="text/javascript" src="/assets/js/head.load.min.js"></script>
 <script type="text/javascript">
-    head.js({ jQuery: '/js/jquery-1.6.4.min.js'});
-    head.js({ analytics: '/js/analytics.js'}, function() {
+    head.js({ jQuery: '/assets/js/jquery-1.6.4.min.js'});
+    head.js({ analytics: '/assets/js/analytics.js'}, function() {
         analytics().load();
     });
-    head.js('https://apis.google.com/js/plusone.js')
-    head.js('http://platform.twitter.com/widgets.js')
+    head.js({ googlePlusOne : 'https://apis.google.com/js/plusone.js'})
+    head.js({ twitterBtn :'http://platform.twitter.com/widgets.js'})
 </script>
 <!--[if lt IE 9]>
 <script type="text/javascript">
@@ -19,9 +19,9 @@
 </script>
 <![endif]-->
 
-<link href="/css/bootstrap.min.css" rel="stylesheet"/>
-<link href="/css/custom.css" rel="stylesheet"/>
-<link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+<link href="/assets/css/bootstrap.min.css" rel="stylesheet"/>
+<link href="/assets/css/custom.css" rel="stylesheet"/>
+<link href="/assets/images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 <link rel="alternate" type="application/atom+xml" title="{{site.name}} Feed" href="/atom.xml"/>
 <link rel="canonical" href="{{site.url | append: page.url}}"/>
 
