--- a/src/_includes/posts/posts-head.html
+++ b/src/_includes/posts/posts-head.html
@@ -1,11 +1,10 @@
-<script type="text/javascript" src="/js/comments.js"></script>
 <script type="text/javascript">
-    $(function() {
+    head.js({comments : '/assets/js/comments.js'}, function() {
         var comments = Comments({
                     shortname: 'davidmn',
                     postId :   '{{page.id}}',
-                    permalink: '{{ page.url}}'
+                    permalink: '{{ site.url | append: page.url}}'
                 });
         comments.initialize();
-    })
+    });
 </script>
