--- a/src/assets/less/variables.less
+++ b/src/assets/less/variables.less
@@ -39,7 +39,7 @@
 
 // Links
 // -------------------------
-@linkColor:             @gray;
+@linkColor:             @orange;
 @linkColorHover:        darken(@linkColor, 15%);
 
 
