--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -1,17 +1,18 @@
 <meta charset="utf-8"/>
-<title>{{ site.title }}{% if page.title %} - {{page.title}} {% endif %}</title>
 <meta http-equiv="content-language" content="en"/>
 <meta name="description" content="{{site.description}}"/>
 <meta name="keywords" content="{{site.keywords}}"/>
 <meta name="author" content="{{site.author}}"/>
+
 <script type="text/javascript" src="/assets/js/head.load.min.js"></script>
 <script type="text/javascript">
-    head.js({ jQuery: '/assets/js/jquery-1.6.4.min.js'});
-    head.js({ analytics: '/assets/js/analytics.js'}, function() {
-        analytics().load();
-    });
-    head.js({ googlePlusOne : 'https://apis.google.com/js/plusone.js'})
-    head.js({ twitterBtn :'http://platform.twitter.com/widgets.js'})
+head.js({ jquery: '/assets/js/jquery-1.7.2.min.js'}, {'jquery-tooltip': '/assets/js/bootstrap-tooltip.js'});
+head.js({ analytics: '/assets/js/analytics.js'}, function() {
+  analytics().load();
+});
+head.ready("jquery", function(){
+  head.js('/assets/js/application.js')
+})
 </script>
 <!--[if lt IE 9]>
 <script type="text/javascript">
@@ -19,10 +20,9 @@
 </script>
 <![endif]-->
 
-<link href="/assets/css/bootstrap.min.css" rel="stylesheet"/>
+<link href="/assets/less/bootstrap.css" rel="stylesheet"/>
 <link href="/assets/css/custom.css" rel="stylesheet"/>
 <link href="/assets/images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-<link rel="alternate" type="application/atom+xml" title="{{site.name}} Feed" href="/atom.xml"/>
+
 <link rel="canonical" href="{{site.url | append: page.url}}"/>
-
-
+<title>{{ site.title }}{% if page.title %} - {{page.title}} {% endif %}</title>
