Add contact to navigation

--- a/src/_includes/navigation.html
+++ b/src/_includes/navigation.html
@@ -5,6 +5,8 @@
             <ul class="nav">
                 <li
                 {% if page.section == 'home' %} class="active" {% endif %}><a href="/">Home</a></li>
+            <li
+                {% if page.section == 'contact' %} class="active" {% endif %}><a href="/contact">Contact</a></li>
             </ul>
         </nav>
     </div>
